Refactor cmd for userService
